# langchain-b12-public

./: README.md  pyproject.toml
langchain_genai/: langchain_genai.py  langchain_google.py
src/langchain_b12/: genai.py  genai_utils.py
src/langchain_b12/citations/: citations.py
src/langchain_b12/genai/: embeddings.py  genai.py
tests/: test_citations.py
