[project]
name = "langchain-b12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juli Dema", email = "juli.dema@b12-consulting.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.16.1",
    "langchain-core>=0.3.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
